--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Facebook api strings -->
+    <string name="facebook_app_id">3271044956513667</string>
+    <string name="fb_login_protocol_scheme">fb3271044956513667</string>
+    <string name="facebook_client_token">9c6e5228ca9fa91e4de39ecf2950b0f3</string>
 </resources>
